--- a/_posts/2016-03-01-aboutus.md
+++ b/_posts/2016-03-01-aboutus.md
@@ -5,8 +5,10 @@ title: About Us
 
 ### How We Met
 
-To do
+It was a match made… Online? I first talked to Beth via an online dating service. My initial message asked about her dog, which intrigued her enough to respond. Soon after we had our first date at a local bakery shop. I was my usual quiet self, and I guess Beth didn’t know what to think. Thankfully she always gives a second chance! Their second date was a short hike, and we both brought our dogs. Beth must’ve known what to think this time, because we has yet another date. This third date was at a comedy club, and afterwards, at her car, after a much unexpected kiss, I asked her if she wanted to be my girlfriend.
 
 ### The Proposal
 
-To do
+One of the things Beth and I enjoy doing is hiking. On our first trip to Hocking Hills together, she told me she always wanted to be proposed to there. I took a mental note in case things were to ever escalate…
+
+Fast forward a little over a year. We had talked about getting engaged, and had even bought a ring. Christmas is a few days away and I thought she would enjoy showing off a little bling over the holidays. “Let’s go to that… Hueston Woods? To hike for Christmas Eve” I asked her. “Isn’t that a little far away for one day?” she asked. “Ok, how about Hocking Hills?” Hocking Hills is actually further away… The night before (Christmas Eve Eve?), I tuck the ring in the box into my coat pocket, making sure to leave the bag open elsewhere in the house. We drive on over in the morning. The previous couple of days it has rained fairly hard, but that day it was dry, leaving the streams and waterfalls with a heavy flow. Very few people were there. I eyed for some sort of platform. Over the past week I had written a list of things I love about her. Ten things, to be exact, but there was no reason for that particular number. I found my platform, a small peninsula jutting into the stream, just off the path and beside a rather private waterfall. I tell her I have something to read to her, and, as I pull the list out of my pocket, I stand beside her so she can read it silently as I read it aloud. Then, after I finished, I get on one knee, show her the ring, and ask her the question.
