--- a/_posts/2015-11-15-vendors.md
+++ b/_posts/2015-11-15-vendors.md
@@ -18,7 +18,7 @@ csses: [/css/vendors.css]
 
 ### DJ
 
-[SK Music Productions](http://www.skmusicproductions.com/)
+<a href="http://www.skmusicproductions.com/" style="font-family: Imprint MT Shadow;color: #BAA825;font-size: 2.5em;">SK Music Productions</a>
 
 ### Catering
 
