--- a/_posts/2016-03-01-aboutus.md
+++ b/_posts/2016-03-01-aboutus.md
@@ -5,7 +5,7 @@ title: About Us
 
 ### How We Met
 
-It was a match made… Online? I first talked to Beth via an online dating service. My initial message asked about her dog, which intrigued her enough to respond. Soon after we had our first date at a local bakery shop. I was my usual quiet self, and I guess Beth didn’t know what to think. Thankfully she always gives a second chance! Their second date was a short hike, and we both brought our dogs. Beth must’ve known what to think this time, because we has yet another date. This third date was at a comedy club, and afterwards, at her car, after a much unexpected kiss, I asked her if she wanted to be my girlfriend.
+It was a match made… online? I first talked to Beth via an online dating service. My initial message asked about one of her favorite things (her dog Niko) and mentioned one of my favorite things (my dog Princess).  Soon after, we had our first date at a local bakery shop. Even though I was my usual quiet self and Beth wasn’t quite sure what to think, there was a second date!  It was a short hike at [John Bryan State Park](http://parks.ohiodnr.gov/johnbryan) with our puppies.  Beth must’ve known what to think this time, because we have had many meals and hikes together ever since.
 
 ### The Proposal
 
