--- a/_posts/2016-03-01-aboutus.md
+++ b/_posts/2016-03-01-aboutus.md
@@ -9,6 +9,10 @@ It was a match made… online? I first talked to Beth via an online dating servi
 
 ### The Proposal
 
-One of the things Beth and I enjoy doing is hiking. On our first trip to Hocking Hills together, she told me she always wanted to be proposed to there. I took a mental note in case things were to ever escalate…
+One of the things Beth and I enjoy doing together is hiking. On our first trip to [Hocking Hills](https://www.hockinghills.com/) together, she told me how special that place was to her and off-handedly mentioned that she always wanted to be proposed to there. I took a mental note in case things were to ever escalate...
 
-Fast forward a little over a year. We had talked about getting engaged, and had even bought a ring. Christmas is a few days away and I thought she would enjoy showing off a little bling over the holidays. “Let’s go to that… Hueston Woods? To hike for Christmas Eve” I asked her. “Isn’t that a little far away for one day?” she asked. “Ok, how about Hocking Hills?” Hocking Hills is actually further away… The night before (Christmas Eve Eve?), I tuck the ring in the box into my coat pocket, making sure to leave the bag open elsewhere in the house. We drive on over in the morning. The previous couple of days it has rained fairly hard, but that day it was dry, leaving the streams and waterfalls with a heavy flow. Very few people were there. I eyed for some sort of platform. Over the past week I had written a list of things I love about her. Ten things, to be exact, but there was no reason for that particular number. I found my platform, a small peninsula jutting into the stream, just off the path and beside a rather private waterfall. I tell her I have something to read to her, and, as I pull the list out of my pocket, I stand beside her so she can read it silently as I read it aloud. Then, after I finished, I got down on one knee, showed her the ring, and asked her the question.
+Fast forward a little over a year. We had been talking about getting engaged for a while and finally bought a ring. Christmas was a few days away and I thought she would enjoy showing off a little bling over the holidays.  Even thought it was a long drive for one day, I suggested we go hiking at Hocking Hills on Christmas Eve.
+
+The previous couple of days it had rained fairly hard, but that day it was dry, leaving the streams and waterfalls full and rushing. Very few people were there. I found the perfect location at [Cedar Falls](https://www.hockinghills.com/cedar_falls.html) - a small peninsula jutting into the stream, just off the path and beside a rather private waterfall.
+
+I tell Beth I have something to read to her and pulled a list out of my pocket of ten things I love about her.  I stood beside her so she could read it silently as I read it aloud. Then, after I finished, I got down on one knee, showed her the ring, and asked her to marry me.  She said yes!
