--- a/_posts/2015-11-10-registry.md
+++ b/_posts/2015-11-10-registry.md
@@ -3,6 +3,10 @@ layout: default
 title: Registry
 ---
 
+<style>
+img:hover { transform: scale(1.1); }
+</style>
+
 [![Amazon.com](/images/amazon.svg "Amazon.com")](https://www.amazon.com/wedding/beth-wirick-joseph-hendrix-vandalia-august-2017/registry/2K9BV9JRF4NIB)
 
 [![Kohl's](/images/kohls.svg "Kohl's")](https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3308347)
